src/styles/base/_base_document.scss
/* ... */
// stylelint-enable selector-list-comma-newline-after

// Body
//
// 1. Remove the margin in all browsers.
// 2. As a best practice, apply a default `background-color`.
// 3. Set an explicit initial text-align value so that we can later use the
//    the `inherit` value on things like `<th>` elements.

body {
  @extend %ph-dimensions-document;

  //@include typo-line-heights('text', map-get($roles-typo-line-heights, 'text'));

  margin: 0; // 1
  overflow-x: hidden;
  font-family: map-get($roles-typo-font-families, 'text');
  line-height: map-get($roles-typo-line-heights, 'system');
  color: map-get($roles-col-texts, 'primary');
  text-align: left; // 3
  //background-color: map-get($roles-col-backgrounds, 'page'); // 2

  font-feature-settings: 'onum', 'ss04' 1; // Required in order to use the bulgarian cyrillic in Safari
}

// Suppress the focus outline on elements that cannot be accessed via keyboard.
// This prevents an unwanted focus outline from appearing around elements that
// might still respond to pointer events.
//
// Credit: https://github.com/suitcss/base
[tabindex='-1']:focus {
  outline: none !important;
}


// Content grouping
//
// 1. Add the correct box sizing in Firefox.
// 2. Show the overflow in Edge and IE.

hr {
  height: 0; // 1
  overflow: visible; // 2
  box-sizing: content-box; // 1
}


//
// Typography
//

// Text selection
//
// Set the highlight background color of selected text
@at-root {
  * {
    @include selection(map-get($roles-col-backgrounds, 'selection'));
  }
}

// Remove top margins from headings
//
// By default, `<h1>`-`<h6>` all receive top and bottom margins. We nuke the top
// margin for easier control within type scales as it avoids margin collapsing.
// stylelint-disable selector-list-comma-newline-after
h1,
h2,
h3,
h4,
h5,
h6 {
  @extend %ph-typo-titles;
}
// stylelint-enable selector-list-comma-newline-after

// Reset margins on paragraphs
//
// Similarly, the top margin on `<p>`s get reset. However, we also reset the
// bottom margin to use `rem` units instead of `em`.
p {
  margin-top: 0;

  &:empty {
    display: none;
  }
}

// Abbreviations
//
// 1. Remove the bottom border in Firefox 39-.
// 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
// 3. Add explicit cursor to indicate changed behavior.
// 4. Duplicate behavior to the data-* attribute for our tooltip plugin

abbr[title],
abbr[data-original-title] { // 4
  text-decoration: underline; // 2
  text-decoration: underline dotted; // 2
  cursor: help; // 3
  border-bottom: 0; // 1
}

address {
  margin-bottom: 1rem;
  font-style: normal;
  line-height: inherit;
}

ol,
ul,
dl {
  margin-top: 0;
  margin-bottom: 1rem;
}

ol ol,
ul ul,
ol ul,
ul ol {
  margin-bottom: 0;
}

dt {
  font-weight: 700;
}

dd {
  margin-bottom: .5rem;
  margin-left: 0; // Undo browser default
}

blockquote {
  margin: 0;
}

em,
dfn {
  font-style: italic; // Add the correct font style in Android 4.3-
}

// stylelint-disable font-weight-notation
b,
strong {
  font-weight: map-get($reg-font-weights, 'bold'); // Add the correct font weight in Chrome, Edge, and Safari
}
// stylelint-enable font-weight-notation

mark {
  color: map-get($roles-col-texts, 'primary');
  background-color: map-get($reg-colors, 'golden-tainoi');
}

small {
  font-size: 80%; // Add the correct font size in all browsers
}

//
// Prevent `sub` and `sup` elements from affecting the line height in
// all browsers.
//

sub,
sup {
  position: relative;
  font-size: 75%;
  line-height: 0;
  vertical-align: baseline;
}

sub { bottom: -.25em; }
sup { top: -.5em; }


//
// Links
//

a {
  $col: map-get-deep($roles-col-links, 'light', 'link');
  $map: map-get($roles-col-links, 'light');

  @include transition(all map-get($roles-transitions, 'rainbow') ease-in-out);

  color: $col;
  text-decoration: none;
  cursor: pointer;
  background-color: transparent; // Remove the gray background on active links in IE 10.
  border-bottom-color: rgba($col, .2);
  border-bottom-style: dotted;
  border-bottom-width: 1px;
  -webkit-text-decoration-skip: objects; // Remove gaps in links underline in iOS 8+ and Safari 8+.


  @for $c from 1 through length($map) {
    $name: nth(nth($map, $c), 1);
    $val: map-get($map, $name);

    @if $name != 'link' {
      &:#{$name} {
        color: $val;
        border-bottom-color: rgba($val, .3);
      }
    }
  }

  &:hover {
    border-bottom-color: transparent;
  }

  &:focus {
    outline: none;
  }
}

// And undo these styles for placeholder links/named anchors (without href)
// which have not been made explicitly keyboard-focusable (without tabindex).
// It would be more straightforward to just use a[href] in previous block, but that
// causes specificity issues in many other styles that are too complex to fix.
// See https://github.com/twbs/bootstrap/issues/19402

a:not([href]):not([tabindex]) {
  &,
  &:focus,
  &:hover {
    color: inherit;
    text-decoration: none;
  }

  &:focus {
    outline: 0;
  }
}


//
// Code
//

// stylelint-disable font-family-no-duplicate-names
pre,
code,
kbd,
samp {
  font-family: monospace, monospace; // Correct the inheritance and scaling of font size in all browsers.
  font-size: 1em; // Correct the odd `em` font sizing in all browsers.
}
// stylelint-enable font-family-no-duplicate-names

pre {
  // Remove browser default top margin
  margin-top: 0;
  // Reset browser default of `1em` to use `rem`s
  margin-bottom: 1rem;
  // Don't allow content to break outside
  overflow: auto;
  // We have @viewport set which causes scrollbars to overlap content in IE11 and Edge, so
  // we force a non-overlapping, non-auto-hiding scrollbar to counteract.
  -ms-overflow-style: scrollbar;
}


//
// Figures
//

figure {
  // Apply a consistent margin strategy (matches our type styles).
  margin: 0 0 1rem;
}


//
// Content
//

audio,
video {
  display: inline-block;
}

audio:not([controls]) {
  display: none;
  height: 0;
}
/* ... */

